# ORMPP

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  User_Manual.md  readme_config_thirdparties.md
.github/workflows/: build_cmake.yml  ci-mysql.yml  ci.yml  clang-format.yml
cmake/: ORMPPConfig.cmake.in  ORMPPConfigVersion.cmake.in  cmake_install_abouts.cmake  cmake_uninstall.cmake.in  common_starter.cmake  mysql.cmake  set_platform_vars.cmake
data/config/: ormpp.cfg
data/db/: test_230126.db
ref/xorm/: CMakeLists.txt  README.md  main.cpp
ref/xorm/xorm/: dao.hpp  data_type.hpp  db_utils.hpp  dbconfig.hpp  meta_utility.hpp  mysql.hpp  mysqlc++14.hpp  simple_pool.hpp  sqlite3.hpp  xorm.hpp
ref/xorm/xorm/reflect/: reflector.hpp
scripts/clang-format/: git-clang-format.py  run-style-check-diff.sh
src/config/: ormpp.cfg
src/core/: connection_pool.hpp  dbng.hpp  entity.hpp  main.cpp  ormpp_cfg.hpp  type_mapping.hpp  utility.hpp
src/dbs/: db_common.hpp  mysql.hpp  pg_types.h  postgresql.hpp  sqlite.hpp
src/examples/: CMakeLists.txt  example_mysql.cpp  example_pg.cpp  example_sqlite.cpp  unit_test.hpp
test/: CMakeLists.txt  main.cpp  unit_test.hpp
test/test_github_actions/: readme.md
test/test_main_example/: CMakeLists.txt  main.cpp
